--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,5 @@ FORKING_NETWORK="<main | goerli>"
 ETHERSCAN_API_KEY="<string>"
 OPTIMIZER="<true | false>"
 REPORT_GAS="<true | false>"
+
+POSTGRES_CONNECTION_URL="<url>"
