feat: private key support

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-DEPLOYER="<address>"
 ALCHEMY_KEY="<string?>"
 INFURA_KEY="<string?>"
-MNEMONIC_DEV="<string>"
-MNEMONIC_PROD="<string>"
+
+DEPLOYER="<address>"
+MNEMONIC_DEV="<string>" # optional if private key exist
+MNEMONIC_PROD="<string>" # optional if private key exist
+PRIVATE_KEY_DEPLOYER="<key>"
+
 FORKING_NETWORK="<main | goerli>"
 ETHERSCAN_API_KEY="<string>"
 OPTIMIZER="<true | false>"
