--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "hh:run:main": "hardhat run --network soneium",
     "verify:main": "hardhat verify --network soneium",
     "deploy:dc": "yarn hh:run scripts/deploy/deploy_DailyCheck.ts",
-    "deploy:erc721": "yarn hh:run scripts/deploy/deploy_ArkadaERC721Royalty.ts"
+    "deploy:erc721": "yarn hh:run scripts/deploy/deploy_ArkadaERC721Royalty.ts --network soneium"
   },
   "devDependencies": {
     "@chainlink/contracts": "^0.6.1",
