--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "hh:run:main": "hardhat run --network soneium",
     "verify:main": "hardhat verify --network soneium",
     "deploy:rewarder": "yarn hh:run scripts/deploy/deploy_ArkadaRewarder.ts",
-    "deploy:pyramid": "yarn hh:run scripts/deploy/deploy_Pyramid.ts"
+    "deploy:pyramid": "yarn hh:run scripts/deploy/deploy_Pyramid.ts",
+    "post-deploy": "yarn hh:run scripts/deploy/post-deploy.ts"
   },
   "devDependencies": {
     "@chainlink/contracts": "^0.6.1",
