refactor: etherscan api keys

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,9 @@ MNEMONIC_PROD="<string>" # optional if private key exist
 PRIVATE_KEY_DEPLOYER="<key>"
 
 FORKING_NETWORK="<main | goerli>"
-ETHERSCAN_API_KEY="<string>"
 OPTIMIZER="<true | false>"
 REPORT_GAS="<true | false>"
+
+ETHERSCAN_API_KEY_<chain> ="<string>" #chain = SONIC | BASE ...
 
 POSTGRES_CONNECTION_URL="<url>"
